# fastapi-mongodb-quickstart

./: .editorconfig  README.md  pyproject.toml
